--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,12 +16,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication"
+        android:theme="@style/Theme.PjaidMobile"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.features.ScanQRActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.features.ReportIssueActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.common.MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:theme="@style/Theme.PjaidMobile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
