--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,26 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".presentation.features.auth.LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".presentation.features.auth.ResetPasswordActivity" />
+
+        <activity
+            android:name=".presentation.common.BaseActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".presentation.features.scan.ScanQRActivity"
             android:exported="false" />
         <activity
@@ -30,6 +50,11 @@
         <activity
             android:name=".presentation.features.report.ReportListActivity"
             android:exported="false" />
+        <activity
+            android:name=".presentation.features.report.TicketDetailActivity"
+            android:exported="false" />
+        <activity android:name=".presentation.features.auth.RegisterActivity" />
+
         <activity
             android:name=".presentation.common.MainActivity"
             android:exported="true"
